# llm_labs

./: m02_day06_multi-turn.py  m02_day06_multi-turn_2.py  m02_day06_openai_api.py  m02_day06_openai_api_2.py  m02_day06_openai_api_3.py  m02_day07_llama_basic.ipynb  m02_day08.ipynb  m02_day09.ipynb  m02_day10.ipynb  main.py  pyproject.toml  streamlit_chat.py
data/: excel_example.xlsx  html_example.html  json_example.json  markdown_example.md  txt_example.txt  word_example.docx  xml_example.xml
data/chroma_db/: chroma.sqlite3
saved_index/: docstore.json  index_store.json
