[project]
name = "llm-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.7"
dependencies = [
    "jupyter>=1.1.1",
    "llama-index>=0.14.22",
    "llama-index-core>=0.14.22",
    "llama-index-llms-openai>=0.7.9",
    "llama-parse>=0.6.94",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
