[project]
name = "llm-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.7"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "jupyter>=1.1.1",
    "llama-index>=0.14.22",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-gemini>=0.4.2",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-llms-gemini>=0.6.2",
    "llama-index-llms-openai>=0.7.9",
    "llama-index-readers-web>=0.6.0",
    "llama-index-readers-wikipedia>=0.5.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "llama-index-vector-stores-faiss>=0.6.0",
    "llama-parse>=0.6.94",
    "onnxruntime==1.19.2",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
]
